# Library

./: .gitignore  B.cpp  CMakeLists.txt  I.cpp  in
Tester/: brute.cpp  compile.bat  gen.cpp  in.txt  main.cpp  ok.txt  out.txt  run.bat  test.bat
